fix: fix site-map alignment and margin space

--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -21,8 +21,9 @@
 .site_map {
   display: flex;
   justify-content: space-evenly;
-  // 內容會擠在一起
+  // 內容會擠在一起，現在修改了 .site_map-container 的 Margin
   margin: 0 auto;
+  width: 100%;
   max-width: 800px;
   b {
     font-size: 1em;
@@ -48,7 +49,7 @@
   }
 
   &-container {
-    margin: 1em 0;
+    margin: 1em 1em;
   }
 }
 
@@ -88,8 +89,8 @@
 
 @media screen and (max-width: 600px) {
   .site_map {
-    grid-auto-flow: column;
-    grid-template-columns: auto;
-    grid-template-rows: auto;
+    &-container {
+      -webkit-line-clamp: 2;
+    }
   }
 }
